# DavidHydrology

./: SpecYearComp.ipynb  SpecularityEx.ipynb  VaexEx.ipynb  pyproject.toml
