[project]
name = "specularityexample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pyshp>=3.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "vaex>=4.19.0",
    "xarray[complete]>=2025.12.0",
]
